fix css for rainbow rain so visible in safari, also actually load favicon

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -173,7 +173,7 @@ button {
 /*Vertical Sliding*/
 .slidingVertical {
   display: inline;
-  text-indent: 8px;
+  text-indent: 5px;
 
   @media (min-width: 769px) {
     text-indent: 12px;
@@ -184,6 +184,7 @@ button {
   color: nth($colors, 1);
   opacity: 0;
   position: absolute;
+  padding-right: 5px;
 }
 .slidingVertical span:nth-child(2) {
   color: nth($colors, 2);
@@ -281,36 +282,14 @@ footer {
   font-size: 32px;
   line-height: 40px;
   padding: 0px;
-
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(0, #f22),
-    color-stop(0.15, #f2f),
-    color-stop(0.3, #22f),
-    color-stop(0.45, #2ff),
-    color-stop(0.6, #2f2),
-    color-stop(0.75, #2f2),
-    color-stop(0.9, #ff2),
-    color-stop(1, #f22)
-  );
-  background-image: gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(0, #f22),
-    color-stop(0.15, #f2f),
-    color-stop(0.3, #22f),
-    color-stop(0.45, #2ff),
-    color-stop(0.6, #2f2),
-    color-stop(0.75, #2f2),
-    color-stop(0.9, #ff2),
-    color-stop(1, #f22)
-  );
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
+  color: darkblue;
+  text-shadow: 0 1px 0 #fb4236, 0 2px 0 #fb4236, 0 3px 0 #fb4236,
+    0 4px 0 #ff6b01, 0 5px 0 #ff6b01, 0 6px 0 #ff6b01, 0 7px 0 #fdc741,
+    0 8px 0 #fdc741, 0 9px 0 #fdc741, 0 10px 0 #25ce7b, 0 11px 0 #25ce7b,
+    0 12px 0 #25ce7b, 0 13px 0 #01b3e3, 0 14px 0 #01b3e3, 0 15px 0 #01b3e3,
+    0 16px 0 #da38b5, 0 17px 0 #da38b5, 0 18px 0 #da38b5;
+  /* Pride Rainbow Text CSS found at TypographyCSS.com
+  - by kevinhauger.com */
 
   @media (min-width: 420px) {
     font-size: 40px;
